Fix text input wrap and capitals

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -455,15 +455,17 @@ main {
 
 #task-name-input {
   font-size: 25px;
-  text-transform: capitalize;
+  width: 500px;
+  text-overflow: ellipsis;
 }
 
 #description-input {
   font-size: 14px;
-  text-transform: capitalize;
   height: 20px;
   margin-top: 5px;
   margin-bottom: 15px;
+  width: 500px;
+  text-overflow: ellipsis;
 }
 
 .date-priority-container {
